add login and register server

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,12 +1,12 @@
 CFLAGS = -c -Wall
-LDFLAGS = -lwebsockets
+LDFLAGS = -lwebsockets -lcjson -lsqlite3 -lssl -lcrypto
 CC = gcc
 
 all: server
 
 server: server.o
 	${CC} server.o -o server ${LDFLAGS}
-
+	clear
 server.o: server.c
 	${CC} ${CFLAGS} server.c
 
