register, log in, start match

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -c -Wall
-LDFLAGS = -lwebsockets -lcjson -lsqlite3 -lssl -lcrypto
+LDFLAGS = -lwebsockets -lcjson -lssl -lcrypto -lmysqlclient
 CC = gcc
 
 all: server
@@ -7,6 +7,7 @@ all: server
 server: server.o
 	${CC} server.o -o server ${LDFLAGS}
 	clear
+
 server.o: server.c
 	${CC} ${CFLAGS} server.c
 
